[package]
name = "gfx-xr-example"
version = "0.1.0"
authors = ["Adrien Grandemange <adrien.grandemange@gmail.com>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.23.12"
log = "0.4"
hal = { path = "../gfx/src/hal", version = "0.7", package = "gfx-hal" }
auxil = { path = "..//gfx/src/auxil/auxil", version = "0.8", package = "gfx-auxil" }
gfx-backend-empty = { path = "../gfx/src/backend/empty", version = "0.7" }
winit = { version = "0.24", features = ["web-sys"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.8"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
glsl-to-spirv = "0.1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[dependencies.gfx-backend-vulkan]
path = "../gfx/src/backend/vulkan"
version = "0.7"
optional = true

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
path = "../gfx/src/backend/gl"
version = "0.7"
features = ["cross"]
optional = true

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
path = "../gfx/src/backend/gl"
version = "0.7"
optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.gfx-backend-metal]
path = "../gfx/src/backend/metal"
features = ["cross"]
version = "0.7"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
path = "../gfx/src/backend/dx11"
version = "0.7"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../gfx/src/backend/dx12"
version = "0.7"
optional = true

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.2.1"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
min_sdk_version = 16
target_sdk_version = 29
